# inversion-of-control

./: CHANGELOG.md  LICENSE  README.md  ]  fourmolu.yaml  inversion-of-control.cabal
src/InversionOfControl/: DepDict.hs  ExplicitMonadFn.hs  GMonadTrans.hs  KFn.hs  Lift.hs  LiftN.hs  MapRecur.hs  MonadFn.hs  Recur.hs  Recursion.hs  TcPlugin.hs  TcPlugin2.hs  TcPlugin3.hs  TypeDict.hs
src/InversionOfControl/Recursion/: Cata.hs  Fix.hs  Free.hs  Hylo.hs  IORefGraph.hs  IORefGraphFree.hs  IORefGraphFree0.hs  IORefGraphFree1.hs  Pure.hs
src/InversionOfControl/Recursion/Impl/: Fix.hs  Free.hs
test-build-time/: Main.hs
test-cache/: Main.hs
test-free/: DictImpl.hs  FreeImpl.hs  Main.hs  MonadImpl.hs
test-inc-invariant/: Main.hs
test-recursion/: Main.hs
