cabal-version:      2.4
name:               inversion-of-control
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             Pavol Vargovcik
maintainer:         pavol.vargovcik@gmail.com

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

library
  exposed-modules:
    InversionOfControl.TypeDict
    InversionOfControl.DepDict
    InversionOfControl.Lift
    InversionOfControl.LiftN
    InversionOfControl.MonadFn
    InversionOfControl.Recur
    InversionOfControl.TcPlugin

  -- Modules included in this library but not exported.
  -- other-modules:

  -- LANGUAGE extensions used by modules in this package.
  -- other-extensions:
  build-depends:
    base >=4.13.0.0 && <=4.17,
    mtl ^>=2.2.2,
    template-haskell >=2.16.0.0 && <=2.19,
    ghc-tcplugin-api ^>=0.7.1.0,
  hs-source-dirs:   src
  default-language: Haskell2010

test-suite test-build-time
  default-language:    Haskell2010
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test-build-time
  main-is:             Main.hs
  build-depends:
    base >=4.13.0.0 && <=4.17,
    inversion-of-control,

test-suite test-inc-invariant
  default-language:    Haskell2010
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test-inc-invariant
  main-is:             Main.hs
  build-depends:
    base >=4.13.0.0 && <=4.17,
    mtl ^>=2.2.2,
    inversion-of-control,
