cabal-version:      2.4
name:               inversion-of-control
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

license:            BSD-3-Clause
author:             Pavol Vargovcik
maintainer:         pavol.vargovcik@gmail.com

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

library
  exposed-modules:
    InversionOfControl.TypeDict
    InversionOfControl.Lift
    InversionOfControl.LiftN
    InversionOfControl.MonadFn
    InversionOfControl.TcPlugin
    InversionOfControl.Recursion.Cata
    InversionOfControl.Recursion.Hylo
    InversionOfControl.Recursion.Impl.Fix
    -- InversionOfControl.Recursion.Impl.Free
    -- InversionOfControl.Recursion.Impl.IORefDag
    -- InversionOfControl.Recursion.Impl.SortedArrayDag

  build-depends:
    base >=4.17 && <4.21,
    mtl >=2.2.2 && <2.4,
    template-haskell >=2.19.0.0 && <2.23,
    containers >=0.6 && <0.8,
    ghc >=9.4 && <9.11,
    unordered-containers >=0.2.19 && < 0.2.21,
    hashable >=1.4 && < 1.6,
    data-fix >=0.3.4 && < 0.4,
    free >=5.2 && < 6,
  hs-source-dirs:   src
  default-language: Haskell2010

test-suite test-build-time
  default-language:    Haskell2010
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test-build-time
  main-is:             Main.hs
  build-depends:
    base >=4.17 && <4.21,
    inversion-of-control,

test-suite test-inc-invariant
  default-language:    Haskell2010
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test-inc-invariant
  main-is:             Main.hs
  build-depends:
    base >=4.17 && <4.21,
    mtl >=2.2.2 && <2.4,
    ghc-prim >=0.9.0,
    inversion-of-control,

test-suite test-cache
  default-language:    Haskell2010
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test-cache
  main-is:             Main.hs
  build-depends:
    base >=4.17 && <4.21,
    ghc-prim >=0.9.0,
    inversion-of-control,

test-suite test-free
  default-language:    Haskell2010
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test-free
  main-is:             Main.hs
  build-depends:
    base >=4.17 && <4.21,
    ghc-prim >=0.9.0,
    free >= 5 && < 6,
    random >= 1.2 && < 1.3,
    time >= 1.12 && < 1.13,
    mtl >=2.2.2 && <2.4,
    inversion-of-control,
  other-modules:
    FreeImpl
    MonadImpl
    DictImpl
  cpp-options: -DCHURCH
